<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:rowCount="4" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/look_at_my_gui"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/click_here"/>

    <CheckBox
        android:id="@+id/check"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/check_this_out"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="40dp"/>

    <ImageButton
        android:id="@+id/flag"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/switch_name" />
</GridLayout>